<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RecipeEditActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:id="@+id/recipeEditTopBar">
        <EditText
            android:id="@+id/recipeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="30sp"
            android:background="@drawable/shadow_box"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:inputType="textMultiLine|textCapSentences"
            android:layout_gravity="start"
            android:hint="@string/recipe_name_hint"
            android:layout_weight="1"
            tools:ignore="Autofill" />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/shadow_box"
            android:src = "@drawable/check_icon"
            android:tint="@color/colorAccent"
            android:layout_gravity="end"
            android:contentDescription="@string/confirm_description"
            android:id="@+id/confirmChanges"
            tools:ignore="RtlHardcoded" />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/shadow_box"
            android:src = "@drawable/cancel_icon"
            android:tint="@color/colorAccent"
            android:layout_gravity="end"
            android:contentDescription="@string/cancel_description"
            android:id="@+id/cancelChanges"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/recipeEditTopBar"
        android:id="@+id/recipeEditSeparator"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recipeEditSeparator"
        android:id="@+id/editScrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="-4dp"
            android:paddingBottom="250dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:background="@drawable/shadow_box"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients_title"
                    android:textColor="@color/colorText"
                    android:textSize="24sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/ingredientContainer"/>
                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/add_square_icon"
                    android:tint="@color/colorAccent"
                    android:id="@+id/newIngredient"
                    android:contentDescription="@string/new_ingredient_description" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/shadow_box"
                android:orientation="vertical"
                android:minHeight="50dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_title"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/instructionContainer"/>
                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/add_square_icon"
                    android:tint="@color/colorAccent"
                    android:id="@+id/newInstruction"
                    android:contentDescription="@string/new_instruction_description"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:background="@drawable/shadow_box"
                android:minHeight="50dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes_title"
                    android:textColor="@color/colorText"
                    android:textSize="24sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/noteContainer"/>
                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/add_square_icon"
                    android:tint="@color/colorAccent"
                    android:id="@+id/newNote"
                    android:contentDescription="@string/new_note_description" />
            </LinearLayout>

            <Button
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:background="@drawable/shadow_box"
                android:text="@string/delete_recipe_label"
                android:textSize="24sp"
                android:textColor="@color/colorText"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:id="@+id/deleteRecipeButton"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>